--- a/class-06-dom-objects-domain_modeling/demo/index.html
+++ b/class-06-dom-objects-domain_modeling/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sandbox</title>
+		<title>Sandbox Restaurant</title>
 	</head>
 	<body>
         <section>
@@ -20,7 +20,8 @@
             <ul id='table-5'>
                 <lh>Table 5</lh>
             </ul>
-        </section
-        <script src="app.js"></script>
+        </section>
+
+        <script src="./app.js"></script>
 	</body>
 </html>
