--- a/class-08-forms-events/demo/zoo/form.html
+++ b/class-08-forms-events/demo/zoo/form.html
@@ -50,8 +50,8 @@
         <!-- use an event handler in app.js and update the dom with the input-->
         <form id="addAnimal" action="#">
             <fieldset>
-                <label for="name">Animal Name</label>
-                <input type="text" name="name"></input>
+                <label for="name" title="animal">Animal Name</label>
+                <input type="text" name="name" placeholder="animal name" required></input>
 
                 <label for="sound">Sound</label>
                 <input type="text" name="sound"></input>
