--- a/class-09-css_wireframe_part_1/demo/sam-skeleton/index.html
+++ b/class-09-css_wireframe_part_1/demo/sam-skeleton/index.html
@@ -49,22 +49,22 @@
       <div class="three columns">
         <p>Three Columns, or 1/4 wide</p>
         <p>Normally, both your a--es would be dead as f--king fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-        <img src="../lab/assets/chinook.jpg" />
+        <img src="../../lab/assets/chinook.jpg" />
       </div>
       <div class="three columns">
         <p>Three Columns, or 1/4 wide</p>
         <p>Normally, both your a--es would be dead as f--king fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-        <img src="../lab/assets/family.jpg" />
+        <img src="../../lab/assets/family.jpg" />
       </div>
       <div class="three columns">
         <p>Three Columns, or 1/4 wide</p>
         <p>Normally, both your a--es would be dead as f--king fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-        <img src="../lab/assets/frosted-cookie.jpg" />
+        <img src="../../lab/assets/frosted-cookie.jpg" />
       </div>
       <div class="three columns">
         <p>Three Columns, or 1/4 wide</p>
         <p>Normally, both your a--es would be dead as f--king fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-        <img src="../lab/assets/fish.jpg" />
+        <img src="../../lab/assets/fish.jpg" />
       </div>
     </div>
 
