--- a/class-11-av-practical-clicktracker/demo/jonathan-media/index.html
+++ b/class-11-av-practical-clicktracker/demo/jonathan-media/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> cutest non-fish ever </title>
+  <title> Cuttlefish </title>
   <link rel="stylesheet" href="css/style.css">
+  <!--<meta name="keywords" >-->
+  <meta name="description" content="This is a website about Cuttlefish.">
+  <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
   <main>
+    <img alt="whaat">
     <article>
       <h1> Cuttlefish </h1>
       <p>Like many of its cephalopod cousins,
@@ -18,9 +22,14 @@
         of the other male cuttlefish and dramatically revealing their true form.
       </p>
     </article>
-    <audio src="media/waterworld.mp3" type="audio/mp3" controls></audio>
+    <audio src="media/waterworld.mp3" type="audio/mp3" controls>
+      <p>hello!</p>
+    </audio>
   </main>
-  <video src="media/cuttlevid.mp4" type="video/mp4" muted autoplay poster="media/cuttlepic.jpg"></video>
+  <video src="media/cuttlevid.mp4" type="video/mp4" muted autoplay
+        poster="media/cuttlepic.jpg">
+        <p>This is just in case!</p>
+  </video>
   <script src="js/app.js"></script>
 </body>
 </html>
